--- a/eppz!kit!testbed/en.lproj/TBViewController_iPhone.xib
+++ b/eppz!kit!testbed/en.lproj/TBViewController_iPhone.xib
@@ -129,7 +129,6 @@
 						<string key="NSFrame">{{20, 136}, {280, 21}}</string>
 						<reference key="NSSuperview" ref="774585933"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -328,7 +327,7 @@
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
-				<string key="-1.CustomClassName">EPPZViewController</string>
+				<string key="-1.CustomClassName">TBViewController</string>
 				<string key="-1.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="-2.CustomClassName">UIResponder</string>
 				<string key="-2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -361,7 +360,7 @@
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
-					<string key="className">EPPZViewController</string>
+					<string key="className">TBViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="labelThatMustWork">EPPZLabel</string>
@@ -394,7 +393,7 @@
 					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EPPZViewController.h</string>
+						<string key="minorKey">./Classes/TBViewController.h</string>
 					</object>
 				</object>
 			</array>
